WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209203
[css-grid] Changes in grid or elements inside the grid affects margin on other elements in the grid
https://bugs.webkit.org/show_bug.cgi?id=209203
Summary
[css-grid] Changes in grid or elements inside the grid affects margin on othe...
Javier Fernandez
Reported
2020-03-17 16:16:54 PDT
Created
attachment 393799
[details]
Test case to reproduce the issue Margin should not be affected when other elements' content are modified in the grid. It seems that we are not recalculating correctly the auto margins when the grid's size changes. Apparently, the root case is that the grid item's margins are not cleared when their container is laid out again, due to a size (width in this case) change.
Attachments
Test case to reproduce the issue
(573 bytes, text/html)
2020-03-17 16:16 PDT
,
Javier Fernandez
no flags
Details
Patch
(51.53 KB, patch)
2020-03-17 16:26 PDT
,
Javier Fernandez
no flags
Details
Formatted Diff
Diff
Patch
(51.54 KB, patch)
2020-03-19 06:00 PDT
,
Javier Fernandez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Javier Fernandez
Comment 1
2020-03-17 16:26:16 PDT
Created
attachment 393800
[details]
Patch
Darin Adler
Comment 2
2020-03-18 21:03:32 PDT
Comment on
attachment 393800
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=393800&action=review
> Source/WebCore/rendering/RenderGrid.cpp:1178 > + LayoutUnit marginLogicalWidth;
How does this patch work? We compute this value, but never use it.
> Source/WebCore/rendering/RenderGrid.cpp:1209 > + LayoutUnit marginLogicalHeight;
Same here.
Darin Adler
Comment 3
2020-03-18 21:04:11 PDT
Comment on
attachment 393800
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=393800&action=review
>> Source/WebCore/rendering/RenderGrid.cpp:1178 >> + LayoutUnit marginLogicalWidth; > > How does this patch work? We compute this value, but never use it.
There must be something wrong with the test, too, since it’s passing without any behavior change.
Javier Fernandez
Comment 4
2020-03-19 06:00:02 PDT
Created
attachment 393969
[details]
Patch
Javier Fernandez
Comment 5
2020-03-19 06:08:51 PDT
Comment on
attachment 393800
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=393800&action=review
>>> Source/WebCore/rendering/RenderGrid.cpp:1178 >>> + LayoutUnit marginLogicalWidth; >> >> How does this patch work? We compute this value, but never use it. > > There must be something wrong with the test, too, since it’s passing without any behavior change.
Wow, I'm so sorry about that. I must have submitted an old version of the patch, which even had test failures in the expected.txt files. As a matter of fact, I applied some changes in the tests to ensure the test-harness checks are done after the Ahem web-font is loaded. I have submitted a PR [1] for the WPT github repo as well with these changes. [1]
https://github.com/web-platform-tests/wpt/pull/22332
>> Source/WebCore/rendering/RenderGrid.cpp:1209 >> + LayoutUnit marginLogicalHeight; > > Same here.
yeah, already submitted a patch to fix this.
EWS
Comment 6
2020-03-19 15:27:12 PDT
Committed
r258735
: <
https://trac.webkit.org/changeset/258735
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 393969
[details]
.
Radar WebKit Bug Importer
Comment 7
2020-03-19 15:28:16 PDT
<
rdar://problem/60655776
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug